.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Reported_Location__c.object
<CustomObject>
    <fields>
        <fullName>Incap311__Location__c</fullName>
        <label>Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Incap311__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__X_Position__c</fullName>
        <label>X Position</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Y_Position__c</fullName>
        <label>Y Position</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Reported Location</label>
    <nameField>
        <label>Location Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reported Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>